feat: Migrate to Supabase for auth and data management
Replaces local storage and manual sync logic with Supabase for a more robust and scalable backend. This includes:

- Implementing Supabase authentication flow.
- Fetching and displaying data from Supabase.
- Updating site configuration and game/category data.
- Removing deprecated IndexedDB logic and related constants.
- Updating the title and name in the `index.html` to reflect the "Troia Games" brand.
- Adding Supabase client as a dependency.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR" class="dark">
 <head>
@@ -5,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#09090b" />
   <link rel="manifest" href="/manifest.json" />
-  <title>Troia Locadora Games | Locadora Digital</title>
+  <title>Troia Games | Locadora Digital Premium</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <style>
@@ -57,7 +58,8 @@
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
-    "react-easy-crop": "https://esm.sh/react-easy-crop@^5.5.6"
+    "react-easy-crop": "https://esm.sh/react-easy-crop@^5.5.6",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.45.4"
   }
 }
 </script>
